--- a/html/campo.html
+++ b/html/campo.html
@@ -21,9 +21,9 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto">
-                <li class="nav-item"><a class="nav-link" href="index.html">INICIO</a></li>
-                <li class="nav-item"><a class="nav-link" href="html/campo.html">CAMPOS</a></li>
-                <li class="nav-item"><a class="nav-link" href="html/reserva.html">RESERVA</a></li>
+                <li class="nav-item"><a class="nav-link" href="../index.html">INICIO</a></li>
+                <li class="nav-item"><a class="nav-link" href="./campo.html">CAMPOS</a></li>
+                <li class="nav-item"><a class="nav-link" href="./reserva.html">RESERVA</a></li>
             </ul>
             <form class="d-flex align-items-center">
                 <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
